--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -5,7 +5,7 @@
 .category-title {
   font-size: 40rpx;
   font-weight: bold;
-  color: #fff;
+  color: $white;
   margin-top: 60rpx;
   margin-left: 5%;
 }
@@ -22,7 +22,7 @@
   margin-top: 40rpx;
   height: 460rpx;
   width: 45%;
-  border: 1px solid #444;
+  border: 1px solid $border-color;
   border-radius: 40rpx;
   overflow: hidden;
 }
