--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -52,11 +52,11 @@
   font-weight: bold;
   font-size: 40rpx;
   margin-top: 40rpx;
-  color: #fff;
+  color: $white;
 }
 
 .gallery-item-desc {
-  color: #989798;
+  color: $desc-color;
   line-height: 40rpx;
   font-size: 26rpx;
 }
