feat: add multi fonts

--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -51,6 +51,7 @@
 .gallery-item-title {
   font-weight: bold;
   font-size: 40rpx;
+  font-family: 'Luam-Light';
   margin-top: 40rpx;
   color: $white;
 }
