--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -48,3 +48,13 @@
     font-size: 44px;
   }
 }
+
+@font-face {
+  font-family: "Luam-Light";
+  src: url('../../fonts/Luam-Light.ttf') format('truetype'),
+}
+
+// @font-face {
+//   font-family: "Sacramento";
+//   src: url('../../fonts/Sacramento.ttf') format('truetype'),
+// }
