--- a/src/components/login.scss
+++ b/src/components/login.scss
@@ -1,24 +1,5 @@
 .login {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 360rpx;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-  z-index: 999;
-  background-color: $login-bg;
-  border-radius: $radius-lg $radius-lg 0 0;
-}
-
-.login-line {
-  margin-top: 8rpx;
-  opacity: 0.7;
-  background-color: $lightgray;
-  height: 6rpx;
-  width: 140rpx;
-  border-radius: 20rpx;
+  text-align: center;
 }
 
 .login-tip {
